--- a/ODExplorer/MainWindow.xaml
+++ b/ODExplorer/MainWindow.xaml
@@ -330,15 +330,104 @@
                                                       x:Name="CurrentSystemBodies"
                                                       Margin="30,5,0,0"
                                                       HeadersVisibility="{Binding Source={StaticResource AppSettings}, Path=SettingsInstance.Value.DisplaySettings.ShowCSBHeaders, Converter={StaticResource BoolToHeaderVis}, ConverterParameter=Column}"
-                                                      Style="{DynamicResource DataGrid Settings}"
+                                                      Style="{DynamicResource GridSyte Bodies}"
                                                       CellStyle="{DynamicResource BodyGrid Cell}"
                                                       RowStyle="{DynamicResource RowStyle Bodies}"
                                                       ColumnHeaderStyle="{DynamicResource DataGrid Header Left}"
                                                       GridLinesVisibility="All"
                                                       CanUserReorderColumns="True"
+                                                      RowDetailsVisibilityMode="Collapsed"
                                                       Visibility="{Binding Bodies.Count, Converter={StaticResource intToVis}, ConverterParameter=Hidden}"
                                                       Loaded="CurrentSystemBodies_Loaded"
                                                       Unloaded="CurrentSystemBodies_Unloaded">
+                                                <!--<DataGrid.RowDetailsTemplate>
+                                                    <DataTemplate>
+                                                        <Grid Background="{DynamicResource PrimaryBackground}">
+                                                            <Border Padding="5"
+                                                                    Margin="5"
+                                                                    Background="{Binding Background, RelativeSource={RelativeSource AncestorType=DataGridRow}}">
+                                                                <Grid Background="Transparent">                                                                   
+                                                                <Grid.ColumnDefinitions>
+                                                                    <ColumnDefinition Width="Auto"/>
+                                                                    <ColumnDefinition Width="Auto"/>
+                                                                    <ColumnDefinition Width="Auto"/>
+                                                                </Grid.ColumnDefinitions>
+                                                                <Grid.RowDefinitions>
+                                                                    <RowDefinition Height="14" />
+                                                                    <RowDefinition Height="*" />
+                                                                </Grid.RowDefinitions>
+                                                         
+                                                                    <TextBlock Grid.Column="0"
+                                                                           Grid.ColumnSpan="2"
+                                                                           Grid.Row="0"
+                                                                           FontSize="12"
+                                                                           Text="Possiblse Signals" />
+                                                                <DataGrid ItemsSource="{Binding NoteableItems}"
+                                                                          Style="{DynamicResource DataGrid Settings}"
+                                                                          HeadersVisibility="None"
+                                                                          RowBackground="Transparent"
+                                                                          Grid.Column="0"
+                                                                          Grid.Row="1"
+                                                                          Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGridRow}}"
+                                                                          CellStyle="{DynamicResource BodyGrid Cell}"
+                                                                          Margin="20,5,0,0">
+                                                                    <DataGrid.Columns>
+                                                                        <DataGridTextColumn Header="Name"
+                                                                                            Width="180"
+                                                                                            FontSize="14"
+                                                                                            Binding="{Binding Name}" />
+                                                                        <DataGridTextColumn Header="Value"
+                                                                                            FontSize="14"
+                                                                                            Width="80"
+                                                                                            Binding="{Binding Value, StringFormat=N0}"
+                                                                                            ElementStyle="{DynamicResource DataGrid Element Right Margin}" />
+                                                                    </DataGrid.Columns>
+                                                                </DataGrid>
+                                                                <DataGrid ItemsSource="{Binding NoteableItems2}"
+                                                                          Style="{DynamicResource DataGrid Settings}"
+                                                                          HeadersVisibility="None"
+                                                                          RowBackground="Transparent"
+                                                                          Grid.Column="1"
+                                                                          Grid.Row="1"
+                                                                          Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGridRow}}"
+                                                                          CellStyle="{DynamicResource BodyGrid Cell}"
+                                                                          Margin="10,5,0,0">
+                                                                    <DataGrid.Columns>
+                                                                        <DataGridTextColumn Header="Name"
+                                                                                            Width="200"
+                                                                                            FontSize="14"
+                                                                                            Binding="{Binding Name}" />
+                                                                        <DataGridTextColumn Header="Value"
+                                                                                            FontSize="14"
+                                                                                            Binding="{Binding Value, StringFormat=N0}"
+                                                                                            ElementStyle="{DynamicResource DataGrid Element Right Margin}" />
+                                                                    </DataGrid.Columns>
+                                                                </DataGrid>
+                                                                <DataGrid ItemsSource="{Binding NoteableItems3}"
+                                                                          Style="{DynamicResource DataGrid Settings}"
+                                                                          HeadersVisibility="None"
+                                                                          RowBackground="Transparent"
+                                                                          Grid.Column="2"
+                                                                          Grid.Row="1"
+                                                                          Foreground="{Binding Foreground, RelativeSource={RelativeSource AncestorType=DataGridRow}}"
+                                                                          CellStyle="{DynamicResource BodyGrid Cell}"
+                                                                          Margin="10,5,0,0">
+                                                                    <DataGrid.Columns>
+                                                                        <DataGridTextColumn Header="Name"
+                                                                                            Width="200"
+                                                                                            FontSize="14"
+                                                                                            Binding="{Binding Name}" />
+                                                                        <DataGridTextColumn Header="Value"
+                                                                                            FontSize="14"
+                                                                                            Binding="{Binding Value, StringFormat=N0}"
+                                                                                            ElementStyle="{DynamicResource DataGrid Element Right Margin}" />
+                                                                    </DataGrid.Columns>
+                                                                </DataGrid>                                                         
+                                                            </Grid>
+                                                            </Border>
+                                                        </Grid>
+                                                    </DataTemplate>
+                                                </DataGrid.RowDetailsTemplate>-->
                                                 <DataGrid.Columns>
                                                     <DataGridTemplateColumn Width="{Binding Source={StaticResource AppSettings}, Path=SettingsInstance.Value.DisplaySettings.ShowTypeColumn, Converter={StaticResource BoolToDGColumnWidth}}"
                                                                             Header="NAME"
@@ -834,21 +923,21 @@
                                                         MinWidth="120"
                                                         Binding="{Binding Path=Distance}">
                                         <DataGridTextColumn.ElementStyle>
-                                        <Style TargetType="{x:Type TextBlock}">
-                                            <Setter Property="HorizontalAlignment"
-                                                    Value="Right" />
-                                            <Setter Property="Margin"
-                                                    Value="0,0,5,0" />
+                                            <Style TargetType="{x:Type TextBlock}">
+                                                <Setter Property="HorizontalAlignment"
+                                                        Value="Right" />
+                                                <Setter Property="Margin"
+                                                        Value="0,0,5,0" />
                                                 <Style.Triggers>
                                                     <DataTrigger Binding="{Binding CsvController.CurrentCsvType, RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}"
-                                                                Value="{x:Static CsvParser:CsvType.Exobiology}">
+                                                                 Value="{x:Static CsvParser:CsvType.Exobiology}">
                                                         <Setter Property="HorizontalAlignment"
                                                                 Value="Left" />
                                                         <Setter Property="Margin"
                                                                 Value="5,0,0,0" />
                                                     </DataTrigger>
                                                 </Style.Triggers>
-                                        </Style>
+                                            </Style>
                                         </DataGridTextColumn.ElementStyle>
                                         <DataGridTextColumn.Header>
                                             <TextBlock Text="{Binding CsvController.CsvHeader[0], RelativeSource={RelativeSource AncestorType={x:Type local:MainWindow}}}" />
@@ -911,7 +1000,7 @@
                                     <CheckBox Content="Auto Start"
                                               Margin="40,0,0,0"
                                               IsChecked="{Binding AppSettings.Value.AutoStartFleetCarrierTimer}"
-                                              VerticalAlignment="Center"/>
+                                              VerticalAlignment="Center" />
                                 </StackPanel>
 
                                 <TextBlock Margin="0,0,0,5">
