--- a/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
+++ b/ODExplorer/Controls/RouteControls/AdditionalControls/CurrentSystemControl.xaml
@@ -86,8 +86,20 @@
                         <TextBlock Text="{Binding Path=Name, Mode=OneWay}"
                                    HorizontalAlignment="Left"
                                    VerticalAlignment="Center"
-                                   Margin="5,0,0,0"
-                                   Style="{DynamicResource SystemGridTextBlockForeground}" />
+                                   Margin="5,0,0,0">
+                            <TextBlock.Style>
+                                <Style TargetType="{x:Type TextBlock}"
+                                       BasedOn="{StaticResource SystemGridTextBlockForeground}">
+                                    <Style.Triggers>
+                                        <DataTrigger Binding="{Binding VisitedByCommander}"
+                                                     Value="True">
+                                            <Setter Property="Foreground"
+                                                    Value="{DynamicResource LowGravity}" />
+                                        </DataTrigger>
+                                    </Style.Triggers>
+                                </Style>
+                            </TextBlock.Style>
+                        </TextBlock>
                     </Grid>
                 </Border>
 
